# MidiSynth

./: CMakeLists.txt
src/: client.cpp  main.cpp  server.cpp  synthesizer.cpp  synthesizer.hpp
